--- a/src/schedule0.css
+++ b/src/schedule0.css
@@ -11,16 +11,20 @@
 	font-weight: bold;
 }
 
-body
+html
 {
-  margin: 0;
-  background-color: #fff;
-	line-height: normal;
 	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
+body.s
+{
+  margin: 0;
+  background-color: #ff2222;
+	line-height: normal;
 
-/* --- Navbar ---*/
+}
+
 nav
 {
   position: relative;
@@ -28,7 +32,7 @@ nav
   width: 100%;
   height: 200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -42,66 +46,39 @@ nav
 
 .navButtons
 {
-  color: #000;
+  width: 270px;
+  color: #550000;
   font-weight: bold;
   text-align: center;
   font-size: 3.5em;
   transition: color 0.2s, background-color 0.2s linear;
-	border: solid 2px black;
-	border-radius: 20px;
-	padding: 0% 2% 0% 2%;
-	margin: 0px 5px 0px 5px;
 }
 
-	.drop
-	{
-		box-shadow: 5px 5px 0px #fff000;
-		position: relative;
-		display: inline-block;
-	}
-
-		.drop:hover
-		{
-			background-color: #fff000;
-		}
-
-	.schedule
-	{
-		box-shadow: 5px 5px 0px #FF0000;
-	}
-
-		.schedule:hover
-		{
-			background-color: #FF0000;
-		}
-
-	.about
-	{
-		box-shadow: 5px 5px 0px #3333FF;
-	}
-
-		.about:hover
-		{
-			background-color: #3333FF;
-		}
+.drop
+{
+  position: relative;
+  display: inline-block;
+}
 
 .dropContent {
   display: none;
   position: absolute;
-  background-color: #fff000;
+  background-color: #ff2222;
   min-width: 160px;
   z-index: 1;
-	box-shadow: inset 0 0 0px 2px #000, 0 0 5px #000;
+	box-shadow: inset 0 0 0px 2px #550000, 0 0 5px #550000;
 }
 
 .drop:hover .dropContent
 {
-  display: block;
+  display:block;
 }
 
-div.navButtons:active
+div.navButtons:hover
 {
-	box-shadow: none;
+  background-color: #550000;
+  color: #ff2222;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .home
@@ -111,13 +88,13 @@ div.navButtons:active
   margin-left: 2%;
 }
 
-.h-content
+.content
 {
   width: 100%;
   margin-top: 50px;
   height: auto;
   font-family: "TeX", sans-serif;
-  color: #000;
+  color: #550000;
   display: flex;
   justify-content: space-evenly;
 }
@@ -134,28 +111,74 @@ h6
 	font-size: 0.5em;
 }
 
+.schedule
+{
+	font-size: 4em;
+	width: 60%;
+	height: auto;
+}
+
 p.bold
 {
 	margin-top: 0;
 	font-weight: bold;
-	color: #443300;
+	color: #550000;
 	margin-left: 1%;
 }
 
-a.navLink
+ul
 {
-	color: #ffcc00;
+	list-style-type: none;
+}
+
+.show > li
+{
+	font-weight: normal;
+	border-style: solid;
+	color: #550000;
+	margin-top: 1%;
+}
+
+.day > li
+{
+	font-weight: bold;
+	color: #ff2222;
+	margin: 1%;
+}
+
+.contrast
+{
+	background-color: #550000;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.selected
+{
+	background-color: #550000;
+	color: #ff2222;
+}
+
+a.navLink:hover
+{
+	color: #ff2222;
+	text-shadow: none;
 }
 
 a:link
 {
-  color: #000;
+  color: #550000;
   text-decoration: none;
 }
 
 a:visited
 {
-	color: #000;
+	color: #550000;
+}
+
+a:hover
+{
+  color: #fff;
+	text-shadow: 3px 3px 0px #550000;
 }
 
 a:active
@@ -174,13 +197,12 @@ img
 {
   width: 30%;
   border-style: solid;
-  color: #000;
+  color: #550000;
   justify-content: center;
   display: flex;
   height: 200px;
   align-items: center;
 	font-size: 5em;
-	border-radius: 50px;
 }
 
 button
@@ -188,7 +210,7 @@ button
 	-webkit-appearance: none;
 	background-color: transparent;
 	border: 0;
-	color: #000;
+	color: #550000;
 	font-size: 1em;
 
 }
@@ -214,21 +236,7 @@ button:hover
 {
   font-family: "TeX", sans-serif;
   font-weight: bold;
-	margin-top: 200px;
   margin-left: 3.33%;
-  color: #000;
-  font-size: 2em;
-}
-
-/* --- SCHEDULE CSS --- */
-
-.content
-{
-  width: 100%;
-  margin-top: 50px;
-  height: auto;
-  font-family: "TeX", sans-serif;
   color: #550000;
-  display: flex;
-  justify-content: space-evenly;
+  font-size: 2em;
 }
