--- a/src/css/home.css
+++ b/src/css/home.css
@@ -35,6 +35,7 @@ body
   background-color: #f2f2f8;
 	line-height: normal;
 	overflow-x: hidden;
+	font-family: "TeX", sans-serif;
 }
 
 /* --- Home Content --- */
@@ -43,7 +44,6 @@ body
   width: 60%;
   margin-top: 50px;
   height: auto;
-  font-family: "TeX", sans-serif;
   color: #000;
 	float: left;
 	margin-left: 2%;
@@ -52,7 +52,7 @@ body
 .BHH-submit
 {
 	width: 100%;
-	font-size: 5em;
+	font-size: 1.5em;
 	font-weight: bold;
 }
 
@@ -76,7 +76,7 @@ p.bold
 {
 	margin-top: 0;
 	font-weight: bold;
-	color: #443300;
+	color: #000;
 	margin-left: 1%;
 }
 
@@ -109,9 +109,17 @@ img
   max-height: 100%;
 }
 
+.live-content
+{
+	width: 30%;
+	float: right;
+	margin-top: 50px;
+	margin-right: 2%;
+}
+
 .audio
 {
-  width: 30%;
+  width: 100%;
   color: #000;
   justify-content: center;
   display: flex;
@@ -119,27 +127,41 @@ img
   align-items: center;
 	font-family: "TeX";
 	font-size: 5em;
+	font-weight: bold;
 	border-radius: 50px;
 	background-color: #fff;
 	box-shadow: 5px 5px 0px #000;
-	float: right;
-	margin-top: 50px;
-	margin-right: 2%;
+	transition: background-color 0.2s, box-shadow 0.2s;
 }
 
-button
+#chat
 {
-	-webkit-appearance: none;
-	background-color: transparent;
-	border: 0;
-	color: #000;
-	font-size: 1em;
-
+	width: 100%;
+	border-radius: 50px;
+	background-color: #fff;
+	box-shadow: 5px 5px 0px #000;
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 10px;
 }
 
-button:hover
+#tlkio
 {
-	color: #8888ff;
+	width:90%;
+	height:400px;
+	top: 10px;
+	border-radius: 20px;
+}
+
+.audio:hover
+{
+	background-color: #ddd;
+}
+
+.audio:active
+{
+	box-shadow: none;
 }
 
 #pause
