--- a/src/css/home.css
+++ b/src/css/home.css
@@ -36,6 +36,7 @@ body
 	line-height: normal;
 	overflow-x: hidden;
 	font-family: "TeX", sans-serif;
+	padding-bottom: 5px;
 }
 
 /* --- Home Content --- */
@@ -52,12 +53,13 @@ body
 .bhh-submit
 {
 	width: 100%;
-	font-size: 5em;
+	font-size: 3em;
 	font-weight: bold;
 	background-color: #fff;
 	border-radius: 20px;
 	box-shadow: 5px 5px 0px #000;
 	transition: background-color 0.2s, box-shadow 0.2s;
+	text-align: center;
 }
 
 	.bhh-submit:hover
@@ -75,16 +77,15 @@ body
   width: 99%;
 	font-size: 5em;
 	font-weight: bold;
-	background-color: #fff;
+	/*background-color: #fff;
 	border-radius: 20px;
-	box-shadow: 5px 5px 0px #000;
+	box-shadow: 5px 5px 0px #000; */
 	padding-left: 1%;
 	margin-bottom: 50px;
 }
 
 a.submission
 {
-	margin-left: 1%;
 	display: block;
 	color: #000;
 }
@@ -130,8 +131,7 @@ img
 {
   font-family: "TeX", sans-serif;
   font-weight: bold;
-	margin-top: 200px;
-  margin-left: 2%;
+	margin-top: 300px;
   color: #000;
   font-size: 2em;
 }
