--- a/src/css/livebar.css
+++ b/src/css/livebar.css
@@ -52,9 +52,10 @@
 	display: flex;
 	justify-content: center;
 	padding-bottom: 10px;
+  padding-top: 10px;
 }
 
-#tlkio
+#minnit
 {
 	width:90%;
 	height:400px;
@@ -70,4 +71,11 @@
 .audio:active
 {
 	box-shadow: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .live-content {
+    width: 94%;
+    margin-right: 3%;
+  }
 }
