--- a/src/css/home.css
+++ b/src/css/home.css
@@ -113,7 +113,8 @@ a.submission
 
 p.bold
 {
-	margin-top: 0;
+	margin-block-start: 0;
+  margin-block-end: 0px;
 	font-weight: bold;
 	color: #000;
 }
