--- a/src/css/livebar.css
+++ b/src/css/livebar.css
@@ -56,10 +56,12 @@
 
 .chat-button {
   margin-bottom: 0px;
+  cursor: pointer;
 }
 
 .minnit
 {
+  margin-top: 20px;
 	width: 90%;
   margin-left: auto;
   margin-right: auto;
@@ -75,7 +77,7 @@
 .expanded {
   transition-delay: 0s, 0s;
   height: 400px;
-  padding-bottom: 20px;
+  padding: 0 5% 5% 5%;
 }
 
 .audio:hover
