--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -84,11 +84,6 @@ nav
     margin-right: 0px;
   }
 
-  .about-select
-  {
-    background-color: #ddddff;
-  }
-
 .dropContent {
   visibility: hidden;
   opacity: 0;
@@ -96,10 +91,11 @@ nav
   transition-duration: 0.2s, 0s;
   transition-delay: 0s, 0.2s;
   position: absolute;
-  background-color: #fff;
+  background-color: #f0f0f0;
   top: calc(100% + 2px);
   left: 0;
   width: 100%;
+  z-index: 2;
 }
 
 	.drop:hover .dropContent
@@ -128,6 +124,10 @@ nav
 {
 	box-shadow: none;
 	/*margin: 5px 0px 0px 5px; */
+}
+
+.drop > div::selection, .shows > a::selection, a > img::selection, a > div::selection {
+  background: #ffffa0;
 }
 
 @media only screen and (max-width: 600px) {
