--- a/src/css/livebar.css
+++ b/src/css/livebar.css
@@ -50,7 +50,7 @@
   padding-top: 10px;
   text-align: center;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 3em;
   overflow: hidden;
 }
 
@@ -61,23 +61,24 @@
 
 .minnit
 {
-  margin-top: 20px;
 	width: 90%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0px;
   height: 0px;
-  transition-property: height;
-  transition-duration: 0.5s, 0s;
-  transition-delay: 0s, 0.5s;
+  transition-property: height, margin-top;
+  transition-duration: 0.5s;
   overflow: hidden;
   border: none;
   box-shadow: 0px 3px 0px #000;
+  padding: 0 5% 5% 5%;
+  display: block;
 }
 
 .expanded {
   transition-delay: 0s, 0s;
   height: 400px;
-  padding: 0 5% 5% 5%;
+  margin-top: 20px;
 }
 
 .audio:hover
