--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -6,6 +6,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   margin-left: 3%;
+  z-index: 10;
 }
 
 .home {
@@ -58,7 +59,7 @@ nav {
   }
 
   .black {
-    box-shadow: 0px 2px 0px #000;
+    box-shadow: 0px 3px 0px #000;
   }
 
   .yellow {
